--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,23 +4,12 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
-    },
-    {
-      "src": "/dist/(.*)",
-      "dest": "/dist/$1"
+      "dest": "index.js"
     }
   ]
 }
